--- a/doc_template/examples_root/examples/nb/ecephys_quickstart.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_quickstart.ipynb
@@ -38,42 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['brain_observatory_1.1', 'functional_connectivity']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# TEMPORARY CELL TO USE NON-PROD WAREHOUSE, DELETE BEFORE RELEASE\n",
-    "\n",
-    "data_directory = '/local1/ecephys_cache_dir/'\n",
-    "manifest_path = os.path.join(data_directory, \"manifest.json\")\n",
-    "\n",
-    "cache = EcephysProjectCache.from_warehouse(scheme=\"http\", host=\"iwarehouse\", manifest=manifest_path)\n",
-    "\n",
-    "print(cache.get_all_session_types())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# # this path determines where downloaded data will be stored\n",
-    "# manifest_path = os.path.join(\"example_ecephys_project_cache\", \"manifest.json\")\n",
+    "# this path determines where downloaded data will be stored\n",
+    "manifest_path = os.path.join('/local1/ecephys_cache_dir/', \"manifest.json\")\n",
     "\n",
-    "# cache = EcephysProjectCache.from_warehouse(manifest=manifest_path)\n",
+    "cache = EcephysProjectCache.from_warehouse(manifest=manifest_path)\n",
     "\n",
-    "# print(cache.get_all_session_types())"
+    "print(cache.get_all_session_types())"
    ]
   },
   {
