--- a/doc_template/examples_root/examples/nb/ecephys_receptive_fields.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_receptive_fields.ipynb
@@ -53,25 +53,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TEMPORARY CELL TO USE NON-PROD WAREHOUSE, DELETE BEFORE RELEASE\n",
-    "\n",
+    "# Example cache directory path, it determines where downloaded data will be stored\n",
     "data_directory = '/local1/ecephys_cache_dir/'\n",
+    "\n",
     "manifest_path = os.path.join(data_directory, \"manifest.json\")\n",
     "\n",
-    "cache = EcephysProjectCache.from_warehouse(scheme=\"http\", host=\"iwarehouse\", manifest=manifest_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_directory = '/mnt/nvme0/ecephys_cache_dir_10_31' # needs to be updated\n",
-    "\n",
-    "# manifest_path = os.path.join(data_directory, \"manifest.json\")\n",
-    "\n",
-    "# cache = EcephysProjectCache.from_warehouse(manifest=manifest_path)"
+    "cache = EcephysProjectCache.from_warehouse(manifest=manifest_path)"
    ]
   },
   {
@@ -83,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:downloading a 1.78e+03mb file from http://api.brain-map.org//api/v2/well_known_file_download/1026123377\n"
+     ]
+    }
+   ],
    "source": [
     "sessions = cache.get_session_table()\n",
     "\n",
@@ -112,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +116,7 @@
        "3645"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +151,7 @@
        " 'stimulus_condition_id']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +207,7 @@
        "15.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +234,7 @@
        "15.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +297,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +664,7 @@
        "[3645 rows x 14 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,14 +698,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nicholas.mei/miniconda3/envs/allensdk/lib/python3.7/site-packages/allensdk/brain_observatory/ecephys/ecephys_session.py:647: UserWarning: You've specified some overlapping time intervals between neighboring rows: [(0, 1)], with a maximum overlap of 0.015479378234388719 seconds.\n",
+      "/home/nicholas.mei/miniconda3/envs/allensdk/lib/python3.7/site-packages/allensdk/brain_observatory/ecephys/ecephys_session.py:644: UserWarning: You've specified some overlapping time intervals between neighboring rows: [(0, 1)], with a maximum overlap of 0.015479378234388719 seconds.\n",
       "  warnings.warn(f\"You've specified some overlapping time intervals between neighboring rows: {overlapping}, \"\n"
      ]
     }
@@ -730,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
