Move behavior_ophys_nwb_api.py to a new location
The BehaviorOphysNwbApi is a behavior + ophys session
data fetching class which contains methods necessary for
filling a BehaviorOphysSession object from an NWB file.

Previously the BehaviorOphysNwbApi was imported from:
allensdk.brain_observatory.behavior.behavior_ophys_api.behavior_ophy_nwb_api

It has now been moved to and can be imported from:
allensdk.brain_observatory.behavior.session_apis.data_fetchers

--- a/doc_template/examples_root/examples/nb/behavior_ophys_session.ipynb
+++ b/doc_template/examples_root/examples/nb/behavior_ophys_session.ipynb
@@ -13,7 +13,7 @@
     "import pandas as pd\n",
     "import collections\n",
     "\n",
-    "from allensdk.brain_observatory.behavior.behavior_ophys_api.behavior_ophys_nwb_api import BehaviorOphysNwbApi\n",
+    "from allensdk.brain_observatory.behavior.session_apis.data_fetchers import BehaviorOphysNwbApi\n",
     "from allensdk.brain_observatory.behavior.behavior_ophys_session import BehaviorOphysSession\n",
     "\n",
     "%matplotlib notebook"
