--- a/doc_template/examples_root/examples/internal/Lims Behavior Project Cache.ipynb
+++ b/doc_template/examples_root/examples/internal/Lims Behavior Project Cache.ipynb
@@ -8,7 +8,7 @@
     "A short introduction to analyzing the Visual Behavior data.\n",
     "This notebook uses the LIMS API to access data, so it will only work on the Allen Institute network.\n",
     "\n",
-    "Please note that local caching functionality has not been implemented, as there are currently no NWB files for these data. Currently the `BehaviorProjectCache` acts as an interface to query for all experiments/sessions in the LIMS database, and to produce `BehaviorDataSession` and/or `BehaviorOphysSession` objects (using `get_session_data` and `get_behavior_session_data`, respectively)."
+    "Please note that local caching functionality has not been implemented, as there are currently no NWB files for these data. Currently the `BehaviorProjectCache` acts as an interface to query for all experiments/sessions in the LIMS database, and to produce `BehaviorSession` and/or `BehaviorOphysSession` objects (using `get_session_data` and `get_behavior_session_data`, respectively)."
    ]
   },
   {
