More notebooks added

--- a/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your allensdk version is: 2.10.1\n"
+      "Your allensdk version is: 2.10.2\n"
      ]
     }
    ],
@@ -101,9 +101,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ophys_session_table.csv: 100%|██████████| 165k/165k [00:00<00:00, 1.71MMB/s]\n",
-      "behavior_session_table.csv: 100%|██████████| 879k/879k [00:00<00:00, 7.96MMB/s]\n",
-      "ophys_experiment_table.csv: 100%|██████████| 336k/336k [00:00<00:00, 2.02MMB/s] \n"
+      "ophys_session_table.csv: 100%|██████████| 165k/165k [00:00<00:00, 1.37MMB/s]\n",
+      "behavior_session_table.csv: 100%|██████████| 879k/879k [00:00<00:00, 3.51MMB/s]\n",
+      "ophys_experiment_table.csv: 100%|██████████| 336k/336k [00:00<00:00, 2.71MMB/s]\n"
      ]
     }
    ],
@@ -1063,7 +1063,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "behavior_session_870987812.nwb: 100%|██████████| 51.7M/51.7M [00:04<00:00, 10.9MMB/s]  \n"
+      "behavior_session_870987812.nwb: 100%|██████████| 51.7M/51.7M [00:03<00:00, 17.1MMB/s]  \n"
      ]
     }
    ],
@@ -1081,13 +1081,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['LazyProperty', 'api', 'behavior_session_id', 'cache_clear', 'from_lims', 'from_nwb_path', 'get_performance_metrics', 'get_reward_rate', 'get_rolling_performance_df', 'licks', 'list_api_methods', 'metadata', 'raw_running_speed', 'rewards', 'running_speed', 'stimulus_presentations', 'stimulus_templates', 'stimulus_timestamps', 'task_parameters', 'trials']\n"
+      "['behavior_session_id', 'cache_clear', 'get_performance_metrics', 'get_reward_rate', 'get_rolling_performance_df', 'licks', 'metadata', 'raw_running_speed', 'rewards', 'running_speed', 'stimulus_presentations', 'stimulus_templates', 'stimulus_timestamps', 'task_parameters', 'trials']\n"
      ]
     }
    ],
    "source": [
     "# List methods of the session that can be used to get data\n",
-    "print([attr_or_method for attr_or_method in dir(behavior_session) if not attr_or_method.startswith('_')])"
+    "print(behavior_session.list_data_attributes_and_methods())"
    ]
   },
   {
@@ -1194,7 +1194,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb31d3e1bd0>"
+       "<matplotlib.image.AxesImage at 0x7ff7cee95d50>"
       ]
      },
      "execution_count": 9,
@@ -1239,7 +1239,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "behavior_ophys_experiment_951980471.nwb: 100%|██████████| 264M/264M [00:21<00:00, 12.5MMB/s]   \n"
+      "behavior_ophys_experiment_951980471.nwb: 100%|██████████| 264M/264M [00:20<00:00, 13.0MMB/s]   \n"
      ]
     }
    ],
@@ -1257,13 +1257,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['LazyProperty', 'api', 'average_projection', 'behavior_session_id', 'cache_clear', 'cell_specimen_table', 'clear_updated_params', 'corrected_fluorescence_traces', 'dff_traces', 'events', 'eye_tracking', 'eye_tracking_rig_geometry', 'from_lims', 'from_nwb_path', 'get_cell_specimen_ids', 'get_cell_specimen_indices', 'get_dff_traces', 'get_params', 'get_performance_metrics', 'get_reward_rate', 'get_rolling_performance_df', 'get_segmentation_mask_image', 'licks', 'list_api_methods', 'max_projection', 'metadata', 'motion_correction', 'needs_data_refresh', 'ophys_experiment_id', 'ophys_session_id', 'ophys_timestamps', 'raw_running_speed', 'rewards', 'roi_masks', 'running_speed', 'segmentation_mask_image', 'set_params', 'stimulus_presentations', 'stimulus_templates', 'stimulus_timestamps', 'task_parameters', 'trials']\n"
+      "['average_projection', 'behavior_session_id', 'cache_clear', 'cell_specimen_table', 'corrected_fluorescence_traces', 'dff_traces', 'events', 'eye_tracking', 'eye_tracking_rig_geometry', 'get_cell_specimen_ids', 'get_cell_specimen_indices', 'get_dff_traces', 'get_performance_metrics', 'get_reward_rate', 'get_rolling_performance_df', 'get_segmentation_mask_image', 'licks', 'max_projection', 'metadata', 'motion_correction', 'ophys_experiment_id', 'ophys_session_id', 'ophys_timestamps', 'raw_running_speed', 'rewards', 'roi_masks', 'running_speed', 'segmentation_mask_image', 'stimulus_presentations', 'stimulus_templates', 'stimulus_timestamps', 'task_parameters', 'trials']\n"
      ]
     }
    ],
    "source": [
     "# List methods of the ophys_experiment object that can be used to get data\n",
-    "print([attr_or_method for attr_or_method in dir(ophys_experiment) if not attr_or_method.startswith('_')])"
+    "print(ophys_experiment.list_data_attributes_and_methods())"
    ]
   },
   {
@@ -1283,7 +1283,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb310e51610>"
+       "<matplotlib.image.AxesImage at 0x7ff7ceb78a10>"
       ]
      },
      "execution_count": 12,
@@ -5785,7 +5785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "formed-thompson",
+   "id": "perceived-alcohol",
    "metadata": {},
    "outputs": [],
    "source": []
