Rename get_performance_metrics() dict fields
Renames:
- `auto_rewarded_trial_count` -> `auto_reward_count`
- `rewarded_trial_count` -> `earned_reward_count`

Docstring changes:
- `earned_reward_count` field now has a new docstring

Relates to: #2017

--- a/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
@@ -490,8 +490,8 @@
        " 'miss_trial_count': 174,\n",
        " 'false_alarm_trial_count': 2,\n",
        " 'correct_reject_trial_count': 41,\n",
-       " 'auto_rewarded_trial_count': 5,\n",
-       " 'rewarded_trial_count': 130,\n",
+       " 'auto_reward_count': 5,\n",
+       " 'earned_reward_count': 130,\n",
        " 'total_reward_count': 135,\n",
        " 'total_reward_volume': 0.935,\n",
        " 'maximum_reward_rate': 4.505086994064128,\n",
