add cells to notebook explaining how to load specific manifest versions

--- a/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
@@ -132,6 +132,176 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38fd2b61",
+   "metadata": {},
+   "source": [
+    "### Managing versions of the dataset\n",
+    "\n",
+    "Over time, updates may be made to the released dataset. These updates will result in new versions of the dataset being available in the S3 bucket. The versions of the dataset are managed through distinct data manifests stored on S3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c8681ba",
+   "metadata": {},
+   "source": [
+    "#### Discovering manifests\n",
+    "\n",
+    "To see all of the manifest files available for this dataset online, run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e32b98a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache.list_manifest_file_names()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2e9d0e9",
+   "metadata": {},
+   "source": [
+    "To see the most up-to-date available manifest, run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d393998d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache.latest_manifest_file()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9b2b376",
+   "metadata": {},
+   "source": [
+    "To see the name of the most up-to-date manifest that you have already downloaded to your system run (note: this just means that the manifest file has been downloaded; it does not necessarily mean that any data has been downloaded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cabb6558",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache.latest_downloaded_manifest_file()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eec37cd",
+   "metadata": {},
+   "source": [
+    "You can list all of the manifest files currently downloaded to your system with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b7c2bf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache.list_all_downloaded_manifests()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83ca391e",
+   "metadata": {},
+   "source": [
+    "#### Loading manifests/dataset versions\n",
+    "\n",
+    "The `VisualBehaviorOphysProjectCache` determines which version of the dataset to use by loading one of these manifests. By default, the `VisualBehaviorProjectCache` loads either\n",
+    "\n",
+    "- the most up-to-date available data manifest, if you are instaniating it on an empty `cache_dir`\n",
+    "\n",
+    "- the data manifest you were last using, if you are instantiating it on a pre-existing `cache_dir` (in this case, the `VisualBehaviorOphysProjectCache` will emit a warning if a more up-to-data data manifest exists online letting you know that you can, if you choose, move to the more up-to-date data manifest)\n",
+    "\n",
+    "To see the manifest that you currently have loaded, run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f4be99e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache.current_manifest()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9981e6e",
+   "metadata": {},
+   "source": [
+    "To load a particular data manifest by hand, run (note: because we are intentionally loading an out-of-date manifest, this will emit a warning alerting us to the existence of the most up-to-date manifest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e151a7cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache.load_manifest('visual-behavior-ophys_project_manifest_v0.1.0.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b13cba09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache.current_manifest()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "851dfeea",
+   "metadata": {},
+   "source": [
+    "As the earlier warning informed us, we can see the difference between an two versions of the dataset by running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03dad58a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg = cache.compare_manifests('visual-behavior-ophys_project_manifest_v0.1.0.json',\n",
+    "                              'visual-behavior-ophys_project_manifest_v0.2.0.json')\n",
+    "print(msg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82103f33",
+   "metadata": {},
+   "source": [
+    "In the case we just examined, only the metadata files have changed.\n",
+    "\n",
+    "The `VisualBehaviorOphysProjectCache` is smart enough to know that, if a file has not changed between version `A` and version `B` of the dataset, and you have already downloaded the file while version `A` of the manifest was loaded, when you move to version `B`, it does not need to download the data again. It will simply construct a symlink where version `B` of the data should exist on your system, pointing to version `A` of the file.\n",
+    "\n",
+    "Because only metadata files changed between `v0.1.0` and `v0.2.0` of the dataset, we could move freely between the two versions without having to worry about downloading a bunch of new data files. This may not be the case for future dataset updates, so you should keep that in mind before moving from an older to a newer version out of hand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "geographic-observation",
    "metadata": {},
    "source": [
